# ai-creative-pipeline

./: .gitignore  pyproject.toml  readme.md
app/: main.py  mock_openfabric.py  server.py  test_api.py  test_llm.py  test_llm_only.py  test_mock.py
app/config/: openfabric_config.py
app/ontology_dc8f06af066e4a7880a5938933236037/: config.py  input.py  output.py
